# realtime-mlops-monitor-system

./: .gitignore  README.md  VIBECODING_WORKFLOW.md  docker-compose.yml  package.json
.vibecoding/: README.md
0_discovery/: README.md
0_discovery/clarifications/: questions_template.md
0_discovery/requirements/: user_stories_template.md
1_design/: PROJECT_WBS_CHECKLIST.md  README.md
1_design/api-contracts/: README.md  api-reference-integrated.md  database-schema.md  openapi.yaml
1_design/architecture/: 01_project_structure.md  02_file_dependencies.md  03_class_relationships.md
2_implementation/: Makefile  README.md  SERVICE_MANAGEMENT_GUIDE.md  feature_generator.py  pyproject.toml  requirements.txt  run_metrics_processing_service.py  run_monitoring_demo.py  setup_env.py  simple_test.py  start_monitoring_services.sh  test_api_endpoints.py  test_metrics_processing.py  test_model_api.py  test_monitoring_performance.py  test_server.py
2_implementation/config/grafana/: corrected_dashboard_sql_fixed.json  model_api_dashboard.json  sql_fixed_dashboard.json  儀表板優化總結.md
2_implementation/docs/: Dashboard_Quick_Reference.md  Metrics_Processing_Service_Design.md  Model_API_Monitoring_API_Specification.md  Model_API_Monitoring_Brief.md  System_Architecture_Document.md
2_implementation/scripts/: create_missing_tables.sql  init-db.sql
2_implementation/src/api/: __init__.py  cache.py  config.py  database.py  dependencies.py  main.py  models.py
2_implementation/src/api/routers/: __init__.py  alerts.py  dashboards.py  metrics.py  realtime.py  services.py
2_implementation/src/components/: __init__.py  event_publisher.py  metrics_event.py  monitor.py
2_implementation/src/services/: __init__.py  alert_manager.py  event_consumer.py  metrics_aggregator.py  metrics_processor.py  storage_manager.py
3_validation/: README.md
4_deployment/: README.md
design_templates/: 07_project_structure_template.md  08_file_dependencies_template.md  09_class_relationships_template.md
knowledge-base/: README.md
